<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="fiveVM" type="com.kanisksapplication.app.modules.five.data.viewmodel.FiveVM"/>
    </data>
    <FrameLayout android:id="@+id/frameFive"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnfillinthedet"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameStackellipsetwo"
                style="@style/groupStylelight_green_A200"
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:gravity="start">

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollHorizontalscrollellipsetwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:fillViewport="true"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/linearColumnellipsetwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/linearRowellipsetwo"
                            android:layout_width="wrap_content"
                            android:layout_height="51dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageEllipseTwo"
                                imageRes="@{@drawable/img_ellipse2}"
                                android:layout_width="@dimen/_70pxh"
                                android:layout_height="@dimen/_66pxh"
                                android:scaleType="fitXY"
                                tools:ignore="ContentDescription"
                                tools:src="@drawable/img_ellipse2" />

                            <ImageView
                                android:id="@+id/imageEllipseOne"
                                imageRes="@{@drawable/img_ellipse1}"
                                android:layout_width="@dimen/_70pxh"
                                android:layout_height="@dimen/_66pxh"
                                android:layout_marginStart="@dimen/_290pxh"
                                android:scaleType="fitXY"
                                tools:ignore="ContentDescription"
                                tools:src="@drawable/img_ellipse1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtBookanAppoint"
                            style="@style/txtInriaSansregular34"
                            android:layout_width="wrap_content"
                            android:layout_height="64dp"
                            android:layout_marginStart="@dimen/_13pxh"
                            android:layout_marginTop="@dimen/_3pxv"
                            android:layout_marginEnd="@dimen/_13pxh"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:singleLine="true"
                            android:text="@{fiveVM.fiveModel.txtBookanAppoint}"
                            tools:text="@string/msg_book_an_appoint" />
                    </LinearLayout>
                </HorizontalScrollView>
            </FrameLayout>

            <TextView
                android:id="@+id/txtFillinthedet"
                style="@style/txtInriaSansregular20"
                textUnderline="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@{fiveVM.fiveModel.txtFillinthedet}"
                tools:text="@string/msg_fill_in_the_det" />
            <LinearLayout android:id="@+id/linearRowselectdate"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_45pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSelectDate"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_weight="0.39"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{fiveVM.fiveModel.txtSelectDate}"
                    style="@style/txtInriaSansregular23" tools:text="@string/lbl_select_date"/>
                <FrameLayout android:id="@+id/frameStackvector"
                    android:layout_height="@dimen/_30pxv"
                    android:layout_marginStart="@dimen/_23pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_175pxh" style="@style/groupStylewhite_A700cornerRadius">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_5pxh"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="@dimen/_10pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector_black_900"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowtime"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTime"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_weight="0.22"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{fiveVM.fiveModel.txtTime}"
                    style="@style/txtInriaSansregular23" tools:text="@string/lbl_time"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroupTen"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_62pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.78"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_3pxv"
                    android:paddingEnd="@dimen/_15pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@{fiveVM.fiveModel.txtGroupTen}"
                    style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_am_pm"/>
            </LinearLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowvenue"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_39pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVenue"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.26"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{fiveVM.fiveModel.txtVenue}"
                    style="@style/txtInriaSansregular23" tools:text="@string/lbl_venue"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_904_radius_10"
                    android:id="@+id/viewRectangleTen"
                    android:layout_height="@dimen/_41pxv"
                    android:layout_marginStart="@dimen/_51pxh" android:layout_width="@dimen/_175pxh"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowcontactno"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtContactNo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.4"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{fiveVM.fiveModel.txtContactNo}"
                    style="@style/txtInriaSansregular23" tools:text="@string/lbl_contact_no"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_904_radius_10"
                    android:id="@+id/viewRectangleEleven"
                    android:layout_height="@dimen/_41pxv"
                    android:layout_marginStart="@dimen/_23pxh" android:layout_width="@dimen/_175pxh"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnclickandchoos"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_48pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylelight_green_2">
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtClickandChoos"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:text="@{fiveVM.fiveModel.txtClickandChoos}"
                    style="@style/txtInriaSansregular21" tools:text="@string/msg_click_and_choos"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
