<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="sevenVM" type="com.kanisksapplication.app.modules.seven.data.viewmodel.SevenVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSeven"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <View
            android:background="@drawable/rectangle_bg_light_green_a200_radius_18"
            android:id="@+id/viewRectangleOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_36pxv"
            android:layout_marginEnd="@dimen/_8pxh" android:layout_width="@dimen/_360pxh"/>
        <FrameLayout android:id="@+id/frameStacklanguage"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_26pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_336pxh">
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtLanguage"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{sevenVM.sevenModel.txtLanguage}"
                style="@style/txtJomolhariregular16" tools:text="@string/msg_scrap_item"/>
            <LinearLayout android:id="@+id/linearRowellipseone"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_82pxh"
                android:layout_marginStart="@dimen/_82pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <View
                    android:background="@drawable/rectangle_bg_green_800_radius_2_5"
                    android:id="@+id/viewEllipseOne"
                    android:layout_height="@dimen/_5pxh" android:layout_width="@dimen/_5pxh"/>
                <View android:background="@color/green_A700"
                    android:id="@+id/lineLineTen"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.85" android:layout_width="0dp"/>
            </LinearLayout>
        </FrameLayout>
        <TextView android:gravity="start"
            android:id="@+id/txtSelecttheitem"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:text="@{sevenVM.sevenModel.txtSelecttheitem}"
            style="@style/txtJomolhariregular32" tools:text="@string/msg_select_the_ite"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPapers"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{sevenVM.sevenModel.txtPapers}"
            style="@style/txtKellySlabregular20" tools:text="@string/lbl_papers"/>
        <FrameLayout android:id="@+id/frameStacknewspapers"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_187pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_9pxv" android:layout_width="@dimen/_330pxh">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSeven"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="3" itemSpace="@{@dimen/_17pxh}"
                tools:itemCount="6" tools:listitem="@layout/row_seven"/>
            <View android:background="@color/black_900"
                android:id="@+id/lineLineThree"
                android:layout_gravity="center"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_40pxv"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_40pxv" android:layout_width="@dimen/_323pxh"/>
        </FrameLayout>
        <View android:background="@color/black_900"
            android:id="@+id/lineLineTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_29pxv" android:layout_width="@dimen/_323pxh"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnuploadscrapim"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowuploadscrapim"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageImageTwo"
                    android:layout_height="@dimen/_28pxh"
                    android:layout_width="@dimen/_31pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image2"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtUploadScrapim"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.86"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{sevenVM.sevenModel.txtUploadScrapim}"
                    style="@style/txtKavivanarregular12" tools:text="@string/msg_upload_scrap_im"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtPricesmaygou"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{sevenVM.sevenModel.txtPricesmaygou}"
                style="@style/txtKavivanarregular12_1" tools:text="@string/msg_prices_may_go_u"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnConfirm"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_44pxh"
                android:layout_marginStart="@dimen/_44pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_25pxh"
                android:paddingStart="@dimen/_26pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_confirm"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_confirm"/>
        </LinearLayout>
    </LinearLayout>
</layout>
